# RBOT

./: CMakeLists.txt
src/: EnhancingFrameGetter.cpp  EnhancingFrameGetter.h  FrameGetter.h  OptProcessor.cpp  OptProcessor.h  RBOTTestRunner.cpp  RBOTTestRunner.h  SingleIterationFrameGetter.cpp  SingleIterationFrameGetter.h  StrictFrameGetter.cpp  StrictFrameGetter.h  argparsing.cpp  argparsing.h  data.cpp  data.hpp  io.cpp  io.hpp  main.cpp  model.cpp  model.h  normals_fragment_shader.fs  normals_vertex_shader.vs  object3d.cpp  object3d.h  optimization_engine.cpp  optimization_engine.h  phongblinn_fragment_shader.fs  phongblinn_vertex_shader.vs  pose_estimator6d.cpp  pose_estimator6d.h  rendering_engine.cpp  rendering_engine.h  signed_distance_transform2d.cpp  signed_distance_transform2d.h  silhouette_fragment_shader.fs  silhouette_vertex_shader.vs  tclc_histograms.cpp  tclc_histograms.h  template_view.h
